--- a/app/views/static_pages/dentalnexus.html.erb
+++ b/app/views/static_pages/dentalnexus.html.erb
@@ -1,17 +1,17 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			<h3>Dental & General Health</h3>
+			<u>Dental & General Health</u>
 		</div>
 	</div>
 </div>
 
 <div class="row-fluid">
-	<div class="span10 offset1">
-		<p style="color: #0f53a5;">
+	<div class="span8 offset2">
+		<p style="color: #0f53a5; margin-top:30px;">
 			Modern research is revealig a closer relationship between your dental health and general. The bacteria that cause preiodontal disease can reach far beyond the oral cavity and may affect these conditions:
 		</p>
-		<p style="color: #0f53a5;">
+		<p style="color: #0f53a5; margin-bottom:55px;">
 			For research updates on that relationship between your dental health and general health, please pay regular visitings to the TLC Wisdom Tooth at tlcwisdomtooth.com
 		</p>
 	</div>
