--- a/app/views/static_pages/dreamsmilediet.html.erb
+++ b/app/views/static_pages/dreamsmilediet.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Preventive Dentistry</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -5,7 +12,7 @@
 			<p>
 				Attaining and maintaining your “Dream Smile” is dependent on a dental friendly diet best represented by the Healthy Eating Plate of Harvard’s School of Public Health and supplemented by TLC’s Dream Smile Diet tips.<br>
 			</p>
-			<p>
+			<p style="margin-bottom:40px;">
 				<b>Healthy Eating Plate and Dental Health</b><br>
 				Your general health requires a well balanced and nutritional diet for which the Healthy Eating Plate provides the guidelines.<br>
 			</p>
@@ -14,16 +21,16 @@
 					<%= image_tag 'healthyeating.jpg' %>
 				</div>
 			</div> 
-			<p>
+			<p style="margin-top:40px;">
 				A well balanced and nutritional diet is particularly important to your dental health.  Indeed, the mouth might be considered a nutritional barometer as evidenced by these examples:
 			</p>
 			<ul>
-				<li>Your teeth and jaws are largely made of calcium found in foods such as dairy products and beans</li>
-				<li>Tongue inflammation can be caused by lack of iron in foods such as bran cereals and nuts</li>
-				<li>Bad breath and canker sores can be caused by lack of niacin in foods such as chicken and fish</li>
-				<li>Mouth sores can be caused by lack of Vitamins B12 and B2 in foods such as chicken, fish, and spinach</li>
-				<li>Bleeding gums and loose teeth can be caused by lack of Vitamin C in foods such as oranges and strawberries</li>
-				<li>Dry mouth can be caused by lack of Vitamin D found in enriched milk and fish</li>
+				<li>Your teeth and jaws are largely made of calcium found in foods such as dairy products and beans</li><br>
+				<li>Tongue inflammation can be caused by lack of iron in foods such as bran cereals and nuts</li><br>
+				<li>Bad breath and canker sores can be caused by lack of niacin in foods such as chicken and fish</li><br>
+				<li>Mouth sores can be caused by lack of Vitamins B12 and B2 in foods such as chicken, fish, and spinach</li><br>
+				<li>Bleeding gums and loose teeth can be caused by lack of Vitamin C in foods such as oranges and strawberries</li><br>
+				<li>Dry mouth can be caused by lack of Vitamin D found in enriched milk and fish</li><br>
 				<li>Periodontal disease can progress more quickly and severely from nutrient deficiency</li>
 			</ul>
 
@@ -32,15 +39,15 @@
 				Although Harvard’s guidelines are essential to your dental health, some approved food and drink could impair your “Dream Smile”.  Accordingly, TLC Dental Group has prepared a supplementary booklet of diet tips to further protect your smile.  The following are excerpts from the booklet:
 			</p>
 			<ul>
-				<li>Fermentable carbohydrates such as bread, crackers, bananas, and breakfast cereals thatbreak down in the mouth and form damaging acids are of particular concern to your “Dream Smile”. These foods should be carefully selected, eaten in moderation, and at times paired beneficially with other foods  For example, crackers might be eaten with aged, hard cheese to counter acidity  Cereals with low sugar content should be preferred to those high in sugar.</li>
+				<li>Fermentable carbohydrates such as bread, crackers, bananas, and breakfast cereals thatbreak down in the mouth and form damaging acids are of particular concern to your “Dream Smile”. These foods should be carefully selected, eaten in moderation, and at times paired beneficially with other foods  For example, crackers might be eaten with aged, hard cheese to counter acidity  Cereals with low sugar content should be preferred to those high in sugar.</li><br>
 
-				<li>Food and drink with high acidity also can compromise your “Dream Smile” by contributing todental erosion.  You should rinse your mouth with water after consuming acidic foods such as fruit juices, pickles, and lemons</li>
+				<li>Food and drink with high acidity also can compromise your “Dream Smile” by contributing todental erosion.  You should rinse your mouth with water after consuming acidic foods such as fruit juices, pickles, and lemons</li><br>
 
-				<li>Snacking between meals should be avoided or minimized and should exclude highly sweetened food and  “sticky carbohydrates” such as potato chips that linger longer on the teeth, lodgebetween them, and enable prolonged acidic formation and erosion.</li> 
+				<li>Snacking between meals should be avoided or minimized and should exclude highly sweetened food and  “sticky carbohydrates” such as potato chips that linger longer on the teeth, lodgebetween them, and enable prolonged acidic formation and erosion.</li><br>
 
-				<li>Water should be your beverage of choice. The drinking of sodas should be avoided or minimized, limited to small rather than large containers, and consumed through straws.</li>
+				<li>Water should be your beverage of choice. The drinking of sodas should be avoided or minimized, limited to small rather than large containers, and consumed through straws.</li><br>
 
-				<li>Vegan and vegetarian diets in which fruit constitutes more than two-thirds of the whole should be reviewed by TLC Dental to assure that they are fully nutritional and not unduly acidic.</li>
+				<li>Vegan and vegetarian diets in which fruit constitutes more than two-thirds of the whole should be reviewed by TLC Dental to assure that they are fully nutritional and not unduly acidic.</li><br>
 
 				<li>Children’s mouths are of particular dietary concern. Baby bottle tooth decay is caused when a baby’s teeth are in extended contact with milk, sugared food and drink.   Sugared commercial snacks for children promote cavities and set a pattern for adult snacking.  And “sticky carbohydrates” should be avoided by children with braces.</li>
 			</ul>
