--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -39,7 +39,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Insurance: We Fight for your Dental Health </h3>
+			<h3>Insurance: We Fight for Your Dental Health </h3>
 			<%= image_tag 'boxing.jpg', :class => "center" %><br>
 			<p>
 				We work with most insurance plans and if you have dental coverage please bring your dental policy benefit book to your first appointment.  After a review of your dental history and a thorough and careful dental examination, we shall review with you the best treatment options for your dental and general health.<br>
