--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Preventive Dentistry</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -20,7 +27,7 @@
 			<b>Flossing</b>
 			</p>
 			<ul>
-				<li>Flossing prior to brushing is equally if not more important than brushing itself.</li>
+				<li>Flossing prior to brushing is equally if not more important than brushing itself.</li><br>
 				<li>In flossing, you should gently insert the floss between the teeth and bring it up and down several times while forming a C shape around the teeth and extending it below the gum line.</li>
 			</ul>
 			<p>
@@ -32,30 +39,30 @@
 			<b>Manual Brushing</b>
 			</p>
 			<ul>
-				<li>If you use a manual toothbrush, it should have a small (1” to ½”) head with soft, rounded bristles.</li>
-				<li>You should use a fluoride and tartar control toothpaste bearing the ADA seal of approval and, if recommended by TLC, a desensitizing toothpaste for	sensitive teeth. A pea s
-				<li>In brushing, you should hold your brush at a 45 degree angle and, beginning with the front or cheek side of your top teeth, gently brush up and down away from your gum line in small sections.  Rinse your brush after each section and proceed to your lower teeth and then to the tongue side of you teeth.</li>
-				<li>After brushing your teeth, you should brush your tongue.</li>
+				<li>If you use a manual toothbrush, it should have a small (1” to ½”) head with soft, rounded bristles.</li><br>
+				<li>You should use a fluoride and tartar control toothpaste bearing the ADA seal of approval and, if recommended by TLC, a desensitizing toothpaste for	sensitive teeth. A pea sized amount on the top of the bristles is sufficient</li><br>
+				<li>In brushing, you should hold your brush at a 45 degree angle and, beginning with the front or cheek side of your top teeth, gently brush up and down away from your gum line in small sections.  Rinse your brush after each section and proceed to your lower teeth and then to the tongue side of you teeth.</li><br>
+				<li>After brushing your teeth, you should brush your tongue.</li><br>
 				<li>You should replace your toothbrush every three to four months or sooner if the bristles lose structure and always replace it after a cold.</li>
 			</ul>
 			<p>
 				<b>Rinsing</b>
 			</p>
 			<ul>
-				<li>There are two types of rinses or mouthwashes that are used before or after brushing to address food particles, bacteria, fluoridation, and bad breath.</li>
-				<li>Prescription rinses are for patients with specific oral diseases.  Over-the-counter rinses are for general use but vary in nature and are best selected in consultation with TLC Dental.</li>  
+				<li>There are two types of rinses or mouthwashes that are used before or after brushing to address food particles, bacteria, fluoridation, and bad breath.</li><br>
+				<li>Prescription rinses are for patients with specific oral diseases.  Over-the-counter rinses are for general use but vary in nature and are best selected in consultation with TLC Dental.</li> <br> 
 				<li>In rinsing, you should use the recommended amount of rinse, completely clear the rinse from your mouth, and after rinsing refrain from eating, drinking, or smoking for thirty minutes.</li>
 			</ul>
 			<p>
 				<b>How Often and How Long Should You Floss, Brush, and Rinse,</b>
 			</p>
 				<ul>
-				<li>You should floss for 2 to 3 minutes after every meal and snack or at least twice a day.</li>
-				<li>You should brush your teeth for 3 to 4 minutes after every meal and snack or at least twice a day.</li>
-				<li>If you are unable to floss and brush after a meal or snack, you should thoroughly rinse your mouth with water.</li>
-				<li>Water rinsing in the absence of flossing and brushing might be supplemented with sugarless gum containing Xylitol that reduces bacteria in the mouth and buffers it against acid.</li>
-				<li>You should rinse your mouth for 30 seconds after every flossing and brushing</li>
-				<li>After eating acidic foods such as citrus fruits and tomatoes, you should rinse your mouth with water and wait at least 30 minutes before brushing to avoid brushing acid into your teeth.
+				<li>You should floss for 2 to 3 minutes after every meal and snack or at least twice a day.</li><br>
+				<li>You should brush your teeth for 3 to 4 minutes after every meal and snack or at least twice a day.</li><br>
+				<li>If you are unable to floss and brush after a meal or snack, you should thoroughly rinse your mouth with water.</li><br>
+				<li>Water rinsing in the absence of flossing and brushing might be supplemented with sugarless gum containing Xylitol that reduces bacteria in the mouth and buffers it against acid.</li><br>
+				<li>You should rinse your mouth for 30 seconds after every flossing and brushing</li><br>
+				<li>After eating acidic foods such as citrus fruits and tomatoes, you should rinse your mouth with water and wait at least 30 minutes before brushing to avoid brushing acid into your teeth.</li>
 			</ul>
 			<p>
 				<b>Oral Hygiene for Children</b>
