--- a/app/views/static_pages/rotadent.html.erb
+++ b/app/views/static_pages/rotadent.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Preventive Dentistry</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -33,7 +40,7 @@
 				<li>In a ten year study, almost 70% of Rotadent users exhibited good to very good oral hygiene levels compared to 25% for manual toothbrush users.</li>
 			</ul>
 			<%= image_tag 'rotadentbristle.jpg', :class => "float-left" %>
-			<p>
+			<p><br>
 				The proprietary MicroAccess filaments on the Rotadent®  fit into tight interproximal spaces that conventional brushes can’t reach. These filaments, along with the 360-degree sweeping action — a feature only found on the Rotadent®  — clean out plaque and bacteria from these difficult-to-reach areas.<br><br>	
 			</p>
 			<p>
