--- a/app/views/static_pages/softtissue.html.erb
+++ b/app/views/static_pages/softtissue.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Preventive Dentistry</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -18,18 +25,18 @@
 				<li>Regular Arestin treatment of periodontal pockets</li>
 				<li>TLC fluoride treatment to inhibit root decay and sensitivity</li>
 				<li>Instruction on use of the Rotadent</li> 
-				<li>Use of a 0.12% Chlorhexidine Gluconate oral rinse and Listerine for reducing dental plaque and oral 	bacteria</li>
+				<li>Use of a 0.12% Chlorhexidine Gluconate oral rinse and Listerine for reducing dental plaque and oral bacteria</li>
 			</ul>
 			<p>
 				<b>Personal</b>
 			</p>
 			<ul>
-				<li>Regular use of dental floss</li>
-				<li>Regular and proper use of the Rotadent, an essential part of STM</li>
-				<li>Regular use of a TLC tongue cleaner to remove bacterial build-up, food debris, fungi, and dead 		   cells from the surface of the tongue</li>
-				<li>Regular use of a 0.12% Chlorhexidine Gluconate rinse during infections</li>
-				<li>Regular use of Listerine use for maintenance</li>
-				<li>Regular use of fluorides for sensitivity and remineralization </li>
+				<li>Regular use of dental floss</li><br>
+				<li>Regular and proper use of the Rotadent, an essential part of STM</li><br>
+				<li>Regular use of a TLC tongue cleaner to remove bacterial build-up, food debris, fungi, and dead cells from the surface of the tongue</li><br>
+				<li>Regular use of a 0.12% Chlorhexidine Gluconate rinse during infections</li><br>
+				<li>Regular use of Listerine use for maintenance</li><br>
+				<li>Regular use of fluorides for sensitivity and remineralization </li><br>
 				<li>Faithful observance of your regularly scheduled STM procedures and examinations</li>
 			</ul>
 			<p>
