--- a/app/views/static_pages/tabaccocessationprogram.html.erb
+++ b/app/views/static_pages/tabaccocessationprogram.html.erb
@@ -1,11 +1,18 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Preventive Dentistry</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Tobacco Cessation Program</h3>
+			<%= image_tag 'nosmoking.jpg', :class => "float-right" %>
 			<p>
 				Smoking and all forms of tobacco use lead to a long list of dental problems, including:
 			</p>
-			<%= image_tag 'nosmoking.jpg', :class => "float-right" %>
 			<ul>
 				<li>Cancer of the lips, tongue, mouth, throat, and voice box</li>
 				<li>Periodontal disease, the major cause of tooth loss</li>
