--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
 		        <li class="dropdown-submenu">
 		          <a href="#">Dreamsmile Solutions</a>
 		          <ul class="dropdown-menu">
+		          	<li><%= link_to "Intro", dreamsmiles_path %></li>
 		            <li><%= link_to "Bonding", dreamsmiles_bonding_path %></li>
 		            <li><%= link_to "Bridges", dreamsmiles_bridges_path %></li>
 		            <li><%= link_to "Cleaning", dreamsmiles_cleaning_path %></li>
@@ -69,6 +70,7 @@
 		        <li class="dropdown-submenu">
 		          <%= link_to "Common Dental Problems", commondentalproblems_path %>
 		          <ul class="dropdown-menu">
+		          	<li><%= link_to "Intro", commondentalproblems_path %></li>
 		            <li><%= link_to "Abscessed Tooth or Gum", commondentalproblems_abscessedtooth_path %></li>
 		            <li><%= link_to "Bad Breath", commondentalproblems_badbreath_path %></li>
 		            <li><%= link_to "Broken or Ill Fitting Dentures", commondentalproblems_brokendentures_path %></li>
@@ -98,6 +100,7 @@
 		        <li class="dropdown-submenu">
 		          <%= link_to "Preventive Dentistry", preventivedentistry_path %>
 		          <ul class="dropdown-menu">
+		          	<li><%= link_to "Intro", preventivedentistry_path %></li>
 		            <li><%= link_to "Oral Cancer Screening", preventivedentistry_oralcancerscreening_path %></li>
 		            <li><%= link_to "Professional Dental Cleaning", preventivedentistry_preventivedentalcleaning_path %></li>
 		            <li><%= link_to "Sealants", preventivedentistry_sealants_path %></li>
