--- a/app/views/static_pages/dreamsmiles.html.erb
+++ b/app/views/static_pages/dreamsmiles.html.erb
@@ -1,16 +1,16 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Dream Smile Solutions
+			<u>Dream Smile Solutions</u>
 		</div>
 	</div>
 </div>
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container" style="display: block;">
 			<div class="row-fluid">
 				<div class="span12">
-					<h4>A smile has many graces.</h4>
+					<h4 style="margin-bottom:40px;">A smile has many graces.</h4>
 					<p>
 						It is kindness.
 					</p>
@@ -39,19 +39,19 @@
 						We create your Dream Smile from this rich and varied palette of aesthetic procedures.
 					</p>
 					<%= image_tag 'palate.jpg', :class => "float-right" %>
-					<ul>
-						<li>Bonding</li>
-						<li>Bridges</li>
-						<li>Cleaning</li>
-						<li>Contouring</li>
-						<li>Crowns</li>
-						<li>Dentures</li>
-						<li>Fillings</li>
-						<li>Implants</li>
-						<li>Snap-On Smile</li>
-						<li>Veneers </li>
-						<li>Whitening</li>
-					</ul>
+		          <ul>
+		            <li><%= link_to "Bonding", dreamsmiles_bonding_path %></li>
+		            <li><%= link_to "Bridges", dreamsmiles_bridges_path %></li>
+		            <li><%= link_to "Cleaning", dreamsmiles_cleaning_path %></li>
+		            <li><%= link_to "Contouring", dreamsmiles_contouring_path %></li>
+		            <li><%= link_to "Crowns", dreamsmiles_crowns_path %></li>
+		            <li><%= link_to "Dentures", dreamsmiles_dentures_path %></li>
+		            <li><%= link_to "Fillings", dreamsmiles_fillings_path %></li>
+		            <li><%= link_to "Implants", dreamsmiles_implants_path %></li>	
+		            <li><%= link_to "Snap-On-Smile", dreamsmiles_snaponsmile_path %></li>
+		            <li><%= link_to "Veneers", dreamsmiles_veneers_path %></li>
+		            <li><%= link_to "Whitening", dreamsmiles_whitening_path %></li>		
+		          </ul>
 				</div>
 			</div>
 		</div>
