--- a/app/views/static_pages/oralcancerscreening.html.erb
+++ b/app/views/static_pages/oralcancerscreening.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Preventive Dentistry</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -49,7 +56,7 @@
 			</p>
 			<p>
 				<b>Gentle Comfort</b><br>
-				During the brief oral cancer screening you will enjoy the comfort of our signature “Gentle Dentistry.<br>” 
+				During the brief oral cancer screening you will enjoy the comfort of our signature “Gentle Dentistry.” <br>
 			</p>
 			<p>
 				<b>More Information</b><br>
