--- a/app/views/static_pages/preventivedentalcleaning.html.erb
+++ b/app/views/static_pages/preventivedentalcleaning.html.erb
@@ -1,6 +1,13 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Preventive Dentistry</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
-		<div class="contact-container">
+		<div class="contact-container" style="padding-bottom: 15px;	">
 			<h3>Professional Dental Cleaning</h3>
 			<%= image_tag 'recaretooth.jpg', :class => "float-right" %>
 			<p>
