--- a/app/views/static_pages/preventivedentistry.html.erb
+++ b/app/views/static_pages/preventivedentistry.html.erb
@@ -1,31 +1,29 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Preventive Dentistry
+			<u>Preventive Dentistry</u>
 		</div>
 	</div>
 </div>
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<p>
 				To assure your dental health we have compiled the following summaries of preventive dental treatments.  To benefit from one or more of these treatments please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
 			</p>
 			<%= image_tag 'preventionshield.jpg', :class => "float-right" %>
-			<ul>
-				<b>
-				<li>Oral Cancel Screening</li>
-				<li>Professional Dental Cleaning</li>
-				<li>Sealants</li>
-				<li>TLC Athletic Mouthguard</li>
-				<li>TLC Dream Smile Diet</li>
-				<li>TLC Flouride Treatment</li>
-				<li>TLC Oral Hygiene  </li>
-				<li>TLC Rotadent</li>
-				<li>TLC Soft Tissue</li>
-				<li>TLC Tobacco Cessation Program</li>
-				</b>
-			</ul>		
+	          <ul><b>
+	            <li><%= link_to "Oral Cancer Screening", preventivedentistry_oralcancerscreening_path %></li>
+	            <li><%= link_to "Professional Dental Cleaning", preventivedentistry_preventivedentalcleaning_path %></li>
+	            <li><%= link_to "Sealants", preventivedentistry_sealants_path %></li>
+	            <li><%= link_to "TLC Athletic Mouthguards", preventivedentistry_athleticmouthguards_path %></li>
+	            <li><%= link_to "TLC Dream Smile Diet", preventivedentistry_dreamsmilediet_path %></li>
+	            <li><%= link_to "TLC Flouride Treatments", preventivedentistry_flouridetreatment_path %></li>
+	            <li><%= link_to "TLC Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	
+	            <li><%= link_to "TLC Rotadent Toothbrush", preventivedentistry_rotadent_path %></li>
+	            <li><%= link_to "TLC Soft Tissue Managment", preventivedentistry_softtissue_path %></li>
+	            <li><%= link_to "TLC Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li></b>    
+	          </ul>			
 		</div>
 	</div>
 </div>
