--- a/app/views/static_pages/wisdomteeth.html.erb
+++ b/app/views/static_pages/wisdomteeth.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Common Dental Problems</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
