fixed dreamsmile intro page spacing

--- a/app/views/static_pages/dreamsmiles.html.erb
+++ b/app/views/static_pages/dreamsmiles.html.erb
@@ -11,27 +11,19 @@
 			<div class="row-fluid">
 				<div class="span12">
 					<h4 style="margin-bottom:40px;">A smile has many graces.</h4>
-					<p>
-						It is kindness.
-					</p>
+					<h6>It is kindness.</h6>
 					<ul class="nostyle">
 						<li>“A smile is a universal welcome”  The Dalai Lama </li>
 					</ul>
-					<p>
-						It is appearance.
-					</p>
+						<h6>It is appearance.</h6>
 					<ul class="nostyle">
 						<li>“A smile is the most important thing you wear.”  Yves Saint-Laurent</li>
 					</ul>
-					<p>
-						It is confidence. 
-					</p>
+						<h6>It is confidence.</h6>
 					<ul class="nostyle">
 						<li>“A smile speaks success and confidence.”  Andrew Carnegie</li>
 					</ul>
-					<p>
-						It is well-being.
-					</p>
+						<h6>It is well-being.</h6>
 					<ul class="nostyle">
 						<li>“Beauty, health, and happiness reside in your smile.”  Kate Middleton</li>
 					</ul>
