changed footer font family

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -329,6 +329,7 @@ table.gadget {
   margin-left: 70px;
   margin-right: 70px;
   text-align: justify;
+  font-family: Arial, Helvetica;
     p {
       font-size: 10px;
       color: #6d6d6d;
