--- a/app/views/static_pages/abscessedtooth.html.erb
+++ b/app/views/static_pages/abscessedtooth.html.erb
@@ -9,7 +9,7 @@
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Abscessed Tooth or Gum</h3>
-			<%= image_tag 'abscessedtooth.jpg', :class => "float-right" %>	
+			<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
 			<p>
 				A dental abscess is a bacterial infection of two types.  A gum abscess (periodontal abscess) is generally occasioned by an infection in the space between the tooth and the gum.  A tooth abscess (periapical abscess) starts inside the tooth and appears at the tip of the tooth’s root.<br>
 			</p>
