--- a/app/views/static_pages/advancedtechnology.html.erb
+++ b/app/views/static_pages/advancedtechnology.html.erb
@@ -38,7 +38,7 @@
 					<h3>USBCAM2 Intraoral Camera</h3>
 				</div>	
 				<div class="span5">
-					<%= image_tag 'usbcam.jpg' %>
+					<%= image_tag 'usbcam.jpg', :style => "margin-left:15px;" %>
 				</div>
 			</div>
 
@@ -81,7 +81,7 @@
 					<h3>Polus Whitening Accelerator</h3>
 				</div>
 				<div class="span5">
-					<%= image_tag 'whiteningmachine.jpg' %>
+					<%= image_tag 'whiteningmachine.jpg', :style => "margin-left:15px;" %>
 				</div>
 			</div>
 			<p>
@@ -98,10 +98,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span4">					
+				<div class="span5">					
 					<h3>Cavitron Jet Plus</h3>
 				</div>
-				<div class="span8">
+				<div class="span7">
 					<%= image_tag 'jetplus.jpg' %>
 				</div>				
 			</div>
@@ -120,7 +120,7 @@
 					<h3>Odyssey Navigator Diode Laser</h3>
 				</div>
 				<div class="span5">
-					<%= image_tag 'diodelaser.jpg' %>
+					<%= image_tag 'diodelaser.jpg', :style => "margin-left: 25px;" %>
 				</div>				
 			</div>				
 			<p>
@@ -152,11 +152,14 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span7">				
+				<div class="span7">			
+
 					<h3>Panasonic TC-L32C22 HDTV</h3>
 				</div>
 				<div class="span5">
-					<%= image_tag 'tv.jpg' %>
+					
+
+					<%= image_tag 'tv.jpg', :style => "margin-left:-15px;"%>
 				</div>				
 			</div>
 			<p>
