--- a/app/views/static_pages/dreamsmiles.html.erb
+++ b/app/views/static_pages/dreamsmiles.html.erb
@@ -10,39 +10,24 @@
 		<div class="content-container" style="display: block;">
 			<div class="row-fluid">
 				<div class="span12">
-					<h4 style="margin-bottom:40px;">A smile has many graces.</h4>
-					<h6>It is kindness.</h6>
-					<ul class="nostyle">
-						<li>“A smile is a universal welcome”  The Dalai Lama </li>
-					</ul>
-						<h6>It is appearance.</h6>
-					<ul class="nostyle">
-						<li>“A smile is the most important thing you wear.”  Yves Saint-Laurent</li>
-					</ul>
-						<h6>It is confidence.</h6>
-					<ul class="nostyle">
-						<li>“A smile speaks success and confidence.”  Andrew Carnegie</li>
-					</ul>
-						<h6>It is well-being.</h6>
-					<ul class="nostyle">
-						<li>“Beauty, health, and happiness reside in your smile.”  Kate Middleton</li>
-					</ul>
 					<p>
 						We create your Dream Smile from this rich and varied palette of aesthetic procedures.
 					</p>
 					<%= image_tag 'palate.jpg', :class => "float-right" %>
 		          <ul>
-		            <li><%= link_to "Bonding", dreamsmiles_bonding_path %></li>
-		            <li><%= link_to "Bridges", dreamsmiles_bridges_path %></li>
-		            <li><%= link_to "Cleaning", dreamsmiles_cleaning_path %></li>
-		            <li><%= link_to "Contouring", dreamsmiles_contouring_path %></li>
-		            <li><%= link_to "Crowns", dreamsmiles_crowns_path %></li>
-		            <li><%= link_to "Dentures", dreamsmiles_dentures_path %></li>
-		            <li><%= link_to "Fillings", dreamsmiles_fillings_path %></li>
-		            <li><%= link_to "Implants", dreamsmiles_implants_path %></li>	
-		            <li><%= link_to "Snap-On-Smile", dreamsmiles_snaponsmile_path %></li>
-		            <li><%= link_to "Veneers", dreamsmiles_veneers_path %></li>
-		            <li><%= link_to "Whitening", dreamsmiles_whitening_path %></li>		
+		          	<b>
+		            <li><%= link_to "Bonding", dreamsmiles_bonding_path %></li><br>
+		            <li><%= link_to "Bridges", dreamsmiles_bridges_path %></li><br>
+		            <li><%= link_to "Cleaning", dreamsmiles_cleaning_path %></li><br>
+		            <li><%= link_to "Contouring", dreamsmiles_contouring_path %></li><br>
+		            <li><%= link_to "Crowns", dreamsmiles_crowns_path %></li><br>
+		            <li><%= link_to "Dentures", dreamsmiles_dentures_path %></li><br>
+		            <li><%= link_to "Fillings", dreamsmiles_fillings_path %></li><br>
+		            <li><%= link_to "Implants", dreamsmiles_implants_path %></li><br>
+		            <li><%= link_to "Snap-On-Smile", dreamsmiles_snaponsmile_path %></li><br>
+		            <li><%= link_to "Veneers", dreamsmiles_veneers_path %></li><br>
+		            <li><%= link_to "Whitening", dreamsmiles_whitening_path %></li><br>
+		        	</b>
 		          </ul>
 				</div>
 			</div>
