--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,9 +4,10 @@
 			<i><h3 style="text-decoration:underline">Welcome to TLC Dental Group</h3><h5>TLC is many facets of care.</h5></i>
 		</div>
 	</div>
+</div>
 <div id="left-welcome">
 	<div class="row-fluid">
-		<div class="span6 offset4">
+		<div class="span12">
 			<i><p>
 				<b>TLC is Art</b> expressed by our Toothbrush Mailbox<br>
 				<b>TLC is Comfort</b> in the relaxed ambiance of our office<br>
