--- a/app/views/static_pages/softtissue.html.erb
+++ b/app/views/static_pages/softtissue.html.erb
@@ -20,11 +20,11 @@
 				<b>Professional</b><br>
 			</p>
 			<ul>
-				<li>Regular periodontal examinations to measure pocket depths, recession, inflammation, bleeding, teeth mobility, infection level, plaque index, color, tone, and contour of gingiva</li>
-				<li>Infection control by regular removal of tartar and calculus through scaling and root planing with the advanced Cavitron Jet Plus and the Pro Select Platinum Pezio Ultrasonic Scaler with heated irrigation</li>
-				<li>Regular Arestin treatment of periodontal pockets</li>
-				<li>TLC fluoride treatment to inhibit root decay and sensitivity</li>
-				<li>Instruction on use of the Rotadent</li> 
+				<li>Regular periodontal examinations to measure pocket depths, recession, inflammation, bleeding, teeth mobility, infection level, plaque index, color, tone, and contour of gingiva</li><br>
+				<li>Infection control by regular removal of tartar and calculus through scaling and root planing with the advanced Cavitron Jet Plus and the Pro Select Platinum Pezio Ultrasonic Scaler with heated irrigation</li><br>
+				<li>Regular Arestin treatment of periodontal pockets</li><br>
+				<li>TLC fluoride treatment to inhibit root decay and sensitivity</li><br>
+				<li>Instruction on use of the Rotadent</li> <br>
 				<li>Use of a 0.12% Chlorhexidine Gluconate oral rinse and Listerine for reducing dental plaque and oral bacteria</li>
 			</ul>
 			<p>
