--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,13 +104,13 @@
 		            <li><%= link_to "Oral Cancer Screening", preventivedentistry_oralcancerscreening_path %></li>
 		            <li><%= link_to "Professional Dental Cleaning", preventivedentistry_preventivedentalcleaning_path %></li>
 		            <li><%= link_to "Sealants", preventivedentistry_sealants_path %></li>
-		            <li><%= link_to "TLC Athletic Mouthguards", preventivedentistry_athleticmouthguards_path %></li>
-		            <li><%= link_to "TLC Dream Smile Diet", preventivedentistry_dreamsmilediet_path %></li>
-		            <li><%= link_to "TLC Flouride Treatments", preventivedentistry_flouridetreatment_path %></li>
-		            <li><%= link_to "TLC Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	
-		            <li><%= link_to "TLC Rotadent Toothbrush", preventivedentistry_rotadent_path %></li>
-		            <li><%= link_to "TLC Soft Tissue Managment", preventivedentistry_softtissue_path %></li>
-		            <li><%= link_to "TLC Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li>      
+		            <li><%= link_to "Athletic Mouthguards", preventivedentistry_athleticmouthguards_path %></li>
+		            <li><%= link_to "Dream Smile Diet", preventivedentistry_dreamsmilediet_path %></li>
+		            <li><%= link_to "Flouride Treatments", preventivedentistry_flouridetreatment_path %></li>
+		            <li><%= link_to "Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	
+		            <li><%= link_to "Rotadent Toothbrush", preventivedentistry_rotadent_path %></li>
+		            <li><%= link_to "Soft Tissue Managment", preventivedentistry_softtissue_path %></li>
+		            <li><%= link_to "Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li>      
 		          </ul>	
 		        </li>     
 		        <li><%= link_to "Nexus of Dental & General Health", treatments_dentalnexus_path %></li>
@@ -141,7 +141,7 @@
 		<div class="row-fluid">
 			<div class="span10 offset1">
 				<p>
-					Rothenberg DDS/TLC Dental Group, Route 92, 7197 Highbridge Road, Fayetteville, NY 13066, 315-637-7684.  TLC Dental Group is a full service family dental practice serving Greater Syracuse.  We thank our artist Dan Blaudhild and our website creator Eric Filkins.  
+					Rothenberg DDS/TLC Dental Group, Route 92, 7197 Highbridge Road, Fayetteville, NY 13066, 315-637-7684.  TLC Dental Group is a full service family dental practice serving Greater Syracuse.  We thank our artist Dan Blaushild and our website creator Eric Filkins.  
 				</p>
 			</div>
 		</div>
