--- a/app/views/static_pages/commondentalproblems.html.erb
+++ b/app/views/static_pages/commondentalproblems.html.erb
@@ -9,32 +9,33 @@
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<p>
-				To assure your dental health we have compiled the following summaries of common dental problems and solutions.  For prompt treatment and alleviation of any of these problems, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				To assure your dental health the Wisdom Tooth has compiled the following summaries of common dental problems and solutions.  For prompt treatment and alleviation of any of these problems, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
+			<%= image_tag 'wisdomtooth_staff.jpg', :class => "float-right" %>	
 	          <ul><b>
-	            <li><%= link_to "Abscessed Tooth or Gum", commondentalproblems_abscessedtooth_path %></li>
-	            <li><%= link_to "Bad Breath", commondentalproblems_badbreath_path %></li>
-	            <li><%= link_to "Broken or Ill Fitting Dentures", commondentalproblems_brokendentures_path %></li>
-	            <li><%= link_to "Burning Mouth Syndrome", commondentalproblems_burningmouth_path %></li>
-	            <li><%= link_to "Canker Sores", commondentalproblems_cankersores_path %></li>
-	            <li><%= link_to "Cold Sores", commondentalproblems_coldsores_path %></li>
-	            <li><%= link_to "Cracked or Lost Filling", commondentalproblems_crackedfilling_path %></li>
-	            <li><%= link_to "Dislodged, Lost, or Significatly Chipped Crown", commondentalproblems_chippedcrown_path %></li>	
-	            <li><%= link_to "Dry Mouth", commondentalproblems_drymouth_path %></li>
-	            <li><%= link_to "Fractured or Broken Tooth", commondentalproblems_brokentooth_path %></li>
-	            <li><%= link_to "Grimy, Sticky Teeth", commondentalproblems_stickyteeth_path %></li>
-	            <li><%= link_to "Headache", commondentalproblems_headache_path %></li>
-	            <li><%= link_to "Loose or Lost Tooth", commondentalproblems_losttooth_path %></li>
-	            <li><%= link_to "Root Canal", commondentalproblems_rootcanal_path %></li>
-	            <li><%= link_to "Sleep Apnea", commondentalproblems_sleepapnea_path %></li>
-	            <li><%= link_to "Snoring", commondentalproblems_snoring_path %></li>
-	            <li><%= link_to "Swollen, Tender, Bleeding Gums", commondentalproblems_bleedinggums_path %></li>
-	            <li><%= link_to "Teeth Grinding", commondentalproblems_teethgrinding_path %></li>
-	            <li><%= link_to "TMD or TMJ", commondentalproblems_TMD_path %></li>	
-	            <li><%= link_to "Toothache", commondentalproblems_toothache_path %></li>
-	            <li><%= link_to "Tooth Cavity", commondentalproblems_toothcavity_path %></li>
-	            <li><%= link_to "Tooth Extraction", commondentalproblems_toothextraction_path %></li>
-	            <li><%= link_to "Tooth Sensitivity", commondentalproblems_toothsensitivity_path %></li>
+	            <li><%= link_to "Abscessed Tooth or Gum", commondentalproblems_abscessedtooth_path %></li><br>
+	            <li><%= link_to "Bad Breath", commondentalproblems_badbreath_path %></li><br>
+	            <li><%= link_to "Broken or Ill Fitting Dentures", commondentalproblems_brokendentures_path %></li><br>
+	            <li><%= link_to "Burning Mouth Syndrome", commondentalproblems_burningmouth_path %></li><br>
+	            <li><%= link_to "Canker Sores", commondentalproblems_cankersores_path %></li><br>
+	            <li><%= link_to "Cold Sores", commondentalproblems_coldsores_path %></li><br>
+	            <li><%= link_to "Cracked or Lost Filling", commondentalproblems_crackedfilling_path %></li><br>
+	            <li><%= link_to "Dislodged, Lost, or Significatly Chipped Crown", commondentalproblems_chippedcrown_path %></li><br>
+	            <li><%= link_to "Dry Mouth", commondentalproblems_drymouth_path %></li><br>
+	            <li><%= link_to "Fractured or Broken Tooth", commondentalproblems_brokentooth_path %></li><br>
+	            <li><%= link_to "Grimy, Sticky Teeth", commondentalproblems_stickyteeth_path %></li><br>
+	            <li><%= link_to "Headache", commondentalproblems_headache_path %></li><br>
+	            <li><%= link_to "Loose or Lost Tooth", commondentalproblems_losttooth_path %></li><br>
+	            <li><%= link_to "Root Canal", commondentalproblems_rootcanal_path %></li><br>
+	            <li><%= link_to "Sleep Apnea", commondentalproblems_sleepapnea_path %></li><br>
+	            <li><%= link_to "Snoring", commondentalproblems_snoring_path %></li><br>
+	            <li><%= link_to "Swollen, Tender, Bleeding Gums", commondentalproblems_bleedinggums_path %></li><br>
+	            <li><%= link_to "Teeth Grinding", commondentalproblems_teethgrinding_path %></li><br>
+	            <li><%= link_to "TMD or TMJ", commondentalproblems_TMD_path %></li>	<br>
+	            <li><%= link_to "Toothache", commondentalproblems_toothache_path %></li><br>
+	            <li><%= link_to "Tooth Cavity", commondentalproblems_toothcavity_path %></li><br>
+	            <li><%= link_to "Tooth Extraction", commondentalproblems_toothextraction_path %></li><br>
+	            <li><%= link_to "Tooth Sensitivity", commondentalproblems_toothsensitivity_path %></li><br>
 	            <li><%= link_to "Wisdom Teeth", commondentalproblems_wisdomteeth_path %></li>         
 	          </ul></b>
 		</div>
