--- a/app/views/static_pages/preventivedentistry.html.erb
+++ b/app/views/static_pages/preventivedentistry.html.erb
@@ -13,16 +13,16 @@
 			</p>
 			<%= image_tag 'preventionshield.jpg', :class => "float-right" %>
 	          <ul><b>
-	            <li><%= link_to "Oral Cancer Screening", preventivedentistry_oralcancerscreening_path %></li>
-	            <li><%= link_to "Professional Dental Cleaning", preventivedentistry_preventivedentalcleaning_path %></li>
-	            <li><%= link_to "Sealants", preventivedentistry_sealants_path %></li>
-	            <li><%= link_to "TLC Athletic Mouthguards", preventivedentistry_athleticmouthguards_path %></li>
-	            <li><%= link_to "TLC Dream Smile Diet", preventivedentistry_dreamsmilediet_path %></li>
-	            <li><%= link_to "TLC Flouride Treatments", preventivedentistry_flouridetreatment_path %></li>
-	            <li><%= link_to "TLC Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	
-	            <li><%= link_to "TLC Rotadent Toothbrush", preventivedentistry_rotadent_path %></li>
-	            <li><%= link_to "TLC Soft Tissue Managment", preventivedentistry_softtissue_path %></li>
-	            <li><%= link_to "TLC Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li></b>    
+	            <li><%= link_to "Oral Cancer Screening", preventivedentistry_oralcancerscreening_path %></li><br>
+	            <li><%= link_to "Professional Dental Cleaning", preventivedentistry_preventivedentalcleaning_path %></li><br>
+	            <li><%= link_to "Sealants", preventivedentistry_sealants_path %></li><br>
+	            <li><%= link_to "TLC Athletic Mouthguards", preventivedentistry_athleticmouthguards_path %></li><br>
+	            <li><%= link_to "TLC Dream Smile Diet", preventivedentistry_dreamsmilediet_path %></li><br>
+	            <li><%= link_to "TLC Flouride Treatments", preventivedentistry_flouridetreatment_path %></li><br>
+	            <li><%= link_to "TLC Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	<br>
+	            <li><%= link_to "TLC Rotadent Toothbrush", preventivedentistry_rotadent_path %></li><br>
+	            <li><%= link_to "TLC Soft Tissue Managment", preventivedentistry_softtissue_path %></li><br>
+	            <li><%= link_to "TLC Tobacco Cessation Program", preventivedentistry_tabaccocessationprogram_path %></li><br></b>    
 	          </ul>			
 		</div>
 	</div>
