staff revision pages

--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -148,9 +148,11 @@
 				</div>
 			</div>
 			<div class="row-fluid">
-				<div class="span12">			
+				<div class="span3">		
 					<%= image_tag 'louise.jpg', :class => "float-left" %>
-					<p>
+				</div>
+				<div class="span9">
+					<p style="margin-left:20px;">
 						Louise has devoted a dozen years to maintaining the dental health and appearance of our patients.  She received A.A.S.degrees in both Computer Science and Dental Hygiene and has aptly applied this knowledge to the advanced technology of TLC Dental. She is the proud mother of Michael, Joseph and Louis and the equally proud grandmother of Maria, Josephine, Edward, and Anthony.  She also excelled in animal husbandry as the former custodian of a dog, cat, rabbit, duck, squirrel, ferret, hamster, and fish, all of whom left the nest with the departure of the boys.  Her pursuits now tend to exercise, crafts, computers, and, of course, the kids.  In your visits to TLC Dental, you will enjoy her personal care and her command of modern dental technology.
 					</p>
 				</div>
@@ -169,9 +171,11 @@
 				</div>
 			</div>
 			<div class="row-fluid">
-				<div class="span12">			
+				<div class="span3">			
 					<%= image_tag 'donny.jpg', :class => "float-left" %>
-					<p>
+				</div>
+				<div class="span9">
+					<p style="margin-left:20px;">
 						There's upkeep involved in any family and when you have a family of patients and practitioners as large as TLC Dental there's a boat load of upkeep.  A day never passes without all of us thanking Donny for promptly and efficiently addressing the unexpected demands of a dental office from jump starting a patient's car to repairing a router and for maintaining everything in pristine condition. When he is not tending TLC needs, Donny dotes on his new wife Mindy and his new son Carter and keeps himself fit by swimming, camping, and working out.  Our "man for all seasons" has a medley of talents honed in the home improvement industry and, as a former co-owner of Opus, in the restaurant trade.  In your visits to TLC Dental, you will understand why we don’t lament fine dining’s loss.
 					</p>
 				</div>
