--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -28,6 +28,7 @@ p {
 
 td {
   padding: 10px 50px 0 10px;
+  text-align: left;
 }
 
 .container {
@@ -306,16 +307,17 @@ td {
 
 .imagecolumn {
   width: 200px;
-  text-align: justify;
+
 }
 
 .leftcolumn {
   width: 145px;
+  text-align: left; 
 }
 
 .rightcolumn {
   width: 250px;
-  text-align: justify;
+  text-align: left;
 }
 
 .centered {
