--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -435,15 +435,22 @@
 	<div class="span10 offset1">
 		<div class="content-container">
 			<h3>The Cowardly Lion</h3>
-			<p>
-				For more than a quarter of a century our calling card has been “We cater to dental cowards.”  It is an invocation that has reached far and wide, even to the Cowardly Lion who takes leave of the Kingdom of Oz every six months to visit us for teeth cleaning.<br>
-			</p>
-			<p>
-				He is so enamored of our “Gentle Dentistry” that he often extends his visits and, in the manner of Hollywood stars, is drawn to public events and celebrations where he bathes in the adoration of his fans and, in the manner of dental converts, exhorts them to join the TLC Dental family of patients.<br>
-			</p>
-			<p>
-				We are so grateful for his dedication to TLC Dental that we have made him our official Ambassador-at-Large and have awarded him a "Dream Smile" medal that he polishes daily and wears proudly.  You may encounter him at any number of area festivities where he will smile radiantly, give you a TLC toothbrush, and perhaps say a few words about his friends in Oz. 
-			</p>				
+			<div class="row-fluid">
+				<div class="span4">
+				
+				</div>
+				<div class="span8">
+					<p>
+						For more than a quarter of a century our calling card has been “We cater to dental cowards.”  It is an invocation that has reached far and wide, even to the Cowardly Lion who takes leave of the Kingdom of Oz every six months to visit us for teeth cleaning.<br>
+					</p>
+					<p>
+						He is so enamored of our “Gentle Dentistry” that he often extends his visits and, in the manner of Hollywood stars, is drawn to public events and celebrations where he bathes in the adoration of his fans and, in the manner of dental converts, exhorts them to join the TLC Dental family of patients.<br>
+					</p>
+					<p>
+						We are so grateful for his dedication to TLC Dental that we have made him our official Ambassador-at-Large and have awarded him a "Dream Smile" medal that he polishes daily and wears proudly.  You may encounter him at any number of area festivities where he will smile radiantly, give you a TLC toothbrush, and perhaps say a few words about his friends in Oz. 
+					</p>
+				</div>
+			</div>			
 		</div>
 	</div>
 </div>
