--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -41,6 +41,7 @@ td {
 
 .dropdown-submenu li > a {
   text-align: left;
+  position: relative;
 }
 
 .dropdown-menu {
@@ -50,11 +51,13 @@ td {
 .dropdown-submenu li{
   width: auto;
   border-left: none !important;
+  position: relative;
 }
 
 .dropdown li{
   width: auto;
   border-left: none !important;
+  position: relative;
 }
 
 .navbar {
@@ -65,6 +68,7 @@ td {
 .nav li {
   border-left: 1px solid #2a66af;
   height: 30px;
+  position: relative;
 }
 
 .nav li:first-child {
@@ -149,7 +153,9 @@ td {
 .content-container {
 	color: #2a66af;
 	border: 1px solid #2a66af;
-	border-radius: 13px;
+	-webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
+  border-radius: 13px;
 	padding: 50px;
   margin-top: 55px;
   margin-bottom: -5px;
@@ -187,6 +193,8 @@ td {
 .content-container-first {
   color: #2a66af;
   border: 1px solid #2a66af;
+  -webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
   border-radius: 13px;
   padding: 50px;
   margin-top: 70px;
@@ -219,6 +227,8 @@ td {
 .green-content-container {
   color: #008000;
   border: 1px solid #008000;
+  -webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
   border-radius: 13px;
   padding: 50px;
   margin-top: 55px;
@@ -254,6 +264,8 @@ td {
 .contact-container {
   color: #2a66af;
   border: 1px solid #2a66af;
+  -webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
   border-radius: 13px;
   padding: 50px;
   padding-top: 25px;
